--- a/style.css
+++ b/style.css
@@ -1,76 +1,64 @@
 body {
     
-    font-family: Arial, 'Helvetica Neue', sans-serif; 
-    background-image: url("images/Background.png")
+  font-family: Arial, 'Helvetica Neue', sans-serif; 
+  background-image: url("images/Background.png")
 
 }
 
 h2 {
-  font-family: 'Georgia', Times, 'Times New Roman', serif; 
+font-family: 'Georgia', Times, 'Times New Roman', serif; 
 }
-  .header {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    border-style: solid;
-    border-width: 0px 0px 2px 0px;
-    border-bottom-color: #cccccc;
-    background-color: #ffffff
-    
-  }
+.header {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  border-style: solid;
+  border-width: 0px 0px 2px 0px;
+  border-bottom-color: #cccccc;
+  background-color: #ffffff
+  
+}
 
 
 .nav {
 
-    overflow: hidden;
-    background-color:#fff;
-    width: 960px;
-    margin: 0 auto;
-    padding-top: 20px;
-    
-  }
-
-  #nav {
-
-    overflow: hidden;
-    background-color:#fff;
-    width: 960px;
-    margin: 0 auto;
-    color: black;
-    
-  }
-
-  #navi {
-    color:black
-  }
+  overflow: hidden;
+  background-color:#fff;
+  width: 960px;
+  margin: 0 auto;
   
+  
+}
 #name {
-   background-color: #4aaaa5;
-   font-weight: bold;
-   font-size: 25px;
-   color: #ffffff;
-   padding:15px; 
-   
+ background-color: #4aaaa5;
+ font-weight: bold;
+ font-size: 25px;
+ color: #ffffff;
+ padding:15px; 
 }
-  
+
 .nav a {
-    float: left;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
   
+}
+
 .nav-right a:hover {
-    background-color: #ddd;
-    
-}
+  background-color: #ddd;
   
+}
+
 .nav-right {
-    color: black;
-    float: right;
+  color: black;
+  float: right;
+  margin-top:5px;
+  display:block;
+  
 }
 .background {
 margin:150px 0px;
@@ -78,102 +66,159 @@ margin:150px 0px;
 }
 
 .content {
-  box-sizing:border-box;
-  width: 960px;
-  margin: 0 auto;
-  padding: 10px;
-  border-width: 3px;
-  border-style: solid;
-  border-color: #dddddd;
-  background-color:#ffffff
+box-sizing:border-box;
+width: 960px;
+margin: 0 auto;
+padding: 10px;
+border-width: 3px;
+border-style: solid;
+border-color: #dddddd;
+background-color:#ffffff
 }
 
 .heading {
-  padding: 10px;
-  color: #4aaaa5;
+padding: 10px;
+color: #4aaaa5;
 }
 .footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: #666666;
-  color: white;
-  text-align: center;
-  border-top-color: #4aaaa5;
-  border-width: 8px 0px 0px 0px;
-  border-style: solid;
-  z-index: 5;
+position: fixed;
+left: 0;
+bottom: 0;
+width: 100%;
+background-color: #666666;
+color: white;
+text-align: center;
+border-top-color: #4aaaa5;
+border-width: 8px 0px 0px 0px;
+border-style: solid;
+z-index: 5;
 }
 .contianer-relative{ 
-  position: relative;
- }
+position: relative;
+width: 100%;
+}
 
 .banner-left{ 
-  box-sizing: border-box;
-  position: absolute; 
-  text-align: center;
-  width: 30%;
-  height: 50px;
-  padding:15px;
-  top: 140px;
-  left: 10px;
-  bottom: 0;
-  right: 0;
-  z-index: 51;
-  color:white;
-  background-color: #4aaaa5;
+box-sizing: border-box;
+position: absolute; 
+text-align: center;
+width: 225px;
+height: 50px;
+padding:15px;
+top: 140px;
+left: 10px;
+bottom: 0;
+right: 0;
+z-index: 1;
+color:white;
+background-color: #4aaaa5;
 }
 .banner-right{ 
-  box-sizing: border-box;
-  position: absolute; 
-  text-align: center;
-  width: 30%;
-  height: 50px;
-  padding:15px;
-  top: 140px;
-  left: 310px;
-  bottom: 0;
-  right: 0;
-  z-index: 51;
-  color:white;
-  background-color: #4aaaa5;
+box-sizing: border-box;
+position: absolute; 
+text-align: center;
+width: 225px;
+height: 50px;
+padding:15px;
+top: 140px;
+left: 255px;
+bottom: 0;
+right: 0;
+z-index: 1;
+color:white;
+background-color: #4aaaa5;
 }
 
 
 input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px; 
-  
-  
-  box-sizing: border-box;
-  margin-top: 6px; 
-  margin-bottom: 16px; 
-  resize: vertical
+width: 100%;
+padding: 12px; 
+
+
+box-sizing: border-box;
+margin-top: 6px; 
+margin-bottom: 16px; 
+resize: vertical
 }
 
 
 input[type=submit] {
-  background-color: #4aaaa5;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  cursor: pointer;
+background-color: #4aaaa5;
+color: white;
+padding: 12px 20px;
+border: none;
+cursor: pointer;
 }
 
 
 .container {
-  box-sizing: border-box;
-  width: 960px;
-  margin-top:150px;
-  border: 2px solid #666666;
-  background-color: #ffffff;
+
+background-color: white;
+padding: 20px;
+}
+@media only screen and (max-width: 960px) {
+  .content {
+    width: 75%;
+  } 
+  .nav {
+    width: 100%
+    }
+
+  .banner-right
+  
 }
 
-.jumbotron {
-  background-color: #ffffff
+@media only screen and (max-width: 768px) {
+  .content {
+    width: 75%;
+  } 
+  .nav {
+    width: 100%
+    }
 }
 
-.nav-link {
-  color: black;
+@media only screen and (max-width: 640px) {
+  .banner-right {
+    box-sizing: border-box;
+    position: absolute; 
+    text-align: center;
+    width: 225px;
+    height: 50px;
+    padding:15px;
+    top: 140px;
+    left: 10px;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
+    color:white;
+    background-color: #4aaaa5;
+
+  }
+
+  .contianer-relative {
+    width: 100%;
+  }
+
+  #col-2 {
+    clear: both;
+  }
+  .nav {
+  width: 100%;
+  position: relative;
+  }
+ #name {
+    width:640px;
+    text-align: center;
+    
+  }
+  .nav-right{
+    clear:both;
+    width:70%
+    
+  }
+  .header {
+    position: relative;
+  }
+  
+ 
 }
